испралены ошибки после проверки Трэвиса

--- a/source/less/global.less
+++ b/source/less/global.less
@@ -1,17 +1,21 @@
 @font-face {
   font-family: "Open Sans";
-  src: url("../fonts/opensans.woff"), url("../fonts/opensans.woff2"),
-  url("../fonts/opensansbold.woff"), url("../fonts/opensansbold.woff2"),
-  url("../fonts/opensanslight.woff"), url("../fonts/opensanslight.woff2");
+  src: url("../fonts/opensans.woff"),
+    url("../fonts/opensans.woff2"),
+    url("../fonts/opensansbold.woff"),
+    url("../fonts/opensansbold.woff2"),
+    url("../fonts/opensanslight.woff"),
+    url("../fonts/opensanslight.woff2");
   font-weight: 400;
   font-style: normal;
 }
+
 body {
   margin: auto;
   padding: 0;
   width: 320px;
 
-  font-style: "Open Sans", Arial, san-serif;
+  font-family: Open Sans, Arial, san-serif;
   font-size: 14px;
   line-height: 21px;
   font-weight: 400;
