--- a/source/less/site-list.less
+++ b/source/less/site-list.less
@@ -3,7 +3,7 @@
   line-height: 32px;
   font-weight: 700;
   color: #ffffff;
-  font-family: "Open Sans";
+  font-family: Open Sans, sans-serif;
   text-transform: uppercase;
   list-style: none;
 
@@ -11,7 +11,7 @@
   padding: 0;
   text-align: center;
 
-  & a {
+  a {
     color: #ffffff;
   }
 }
