--- a/source/less/advanteges.less
+++ b/source/less/advanteges.less
@@ -5,7 +5,7 @@
   padding-right: 20px;
   min-height: 1000px;
 
-  font-family: "Open Sans";
+  font-family: Open Sans, sans-serif;
   font-weight: 400;
   color: #283645;
 
