--- a/source/less/packages.less
+++ b/source/less/packages.less
@@ -1,7 +1,7 @@
 .packages {
   margin: 0;
   padding: 0;
-  font-family: "Open Sans";
+  font-family: Open Sans, sans-serif;
   font-weight: 400;
   color: #283645;
   text-transform: uppercase;
