исправлены ошибки после Трэвиса

--- a/source/less/form-page.less
+++ b/source/less/form-page.less
@@ -4,7 +4,7 @@
   padding-left: 20px;
   padding-right: 20px;
 
-  font-family: Open Sans, sans-serif;
+  font-family: "Open Sans", sans-serif;
   color: #283645;
 
   background-image: url("../img/bg-back-mobile@1x.jpg");
