--- a/source/less/get-app.less
+++ b/source/less/get-app.less
@@ -9,7 +9,7 @@
   margin: 0;
   padding: 0;
 
-  font-family: Open Sans, sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 18px;
   line-height: 18px;
   font-weight: 700;
@@ -18,7 +18,7 @@
 }
 
 .get-app__environ {
-  font-family: Open Sans, sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 14px;
   line-height: 24px;
   font-weight: 300;
