--- a/source/less/global.less
+++ b/source/less/global.less
@@ -15,7 +15,7 @@ body {
   padding: 0;
   width: 320px;
 
-  font-family: Open Sans, Arial, san-serif;
+  font-family: "Open Sans", "Arial", san-serif;
   font-size: 14px;
   line-height: 21px;
   font-weight: 400;
