--- a/source/less/site-list.less
+++ b/source/less/site-list.less
@@ -3,7 +3,7 @@
   line-height: 32px;
   font-weight: 700;
   color: #ffffff;
-  font-family: Open Sans, sans-serif;
+  font-family: "Open Sans", sans-serif;
   text-transform: uppercase;
   list-style: none;
 
