--- a/source/less/photo-page.less
+++ b/source/less/photo-page.less
@@ -1,7 +1,7 @@
 .photo-page {
   margin: 0;
   padding: 0;
-  font-family: Open Sans, sans-serif;
+  font-family: "Open Sans", sans-serif;
   color: #283645;
   font-size: 14px;
   line-height: 24px;
