--- a/source/less/reviews.less
+++ b/source/less/reviews.less
@@ -4,7 +4,7 @@
   padding-left: 20px;
   padding-right: 20px;
 
-  font-family: Open Sans, sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-weight: 400;
   color: #283645;
   background-color: #ffffff;
