сделана часть адаптивной верстки крупных блоков главной страницы

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,7 +1,11 @@
+@import "variables.less";
+@import "mixins.less";
 @import "global.less";
+@import "container.less";
 @import "page-header";
 @import "main-nav.less";
 @import "site-list.less";
+@import "appstore-list.less";
 @import "photo-page.less";
 @import "users-photo.less";
 @import "user-card.less";
