--- a/source/less/get-app.less
+++ b/source/less/get-app.less
@@ -1,27 +1,77 @@
 .get-app {
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 28px;
+  width: 320px;
+  padding: 0;
+  margin: 0 auto;
+  min-height: 668px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+
+
+  font-family: "Open Sans", sans-serif;
+  color: #ffffff;
+
+  background-image: url("../img/iphone-hand-mobile@1x.png"), url("../img/bg-back-mobile@1x.jpg");
+  background-repeat: no-repeat;
+  background-position: left 65px, top;
+  background-size: 260px 50%, 100% 400px;
   background-color: #283645;
+}
+
+@media (min-width: @tablet-width) {
+  .get-app {
+    width: 620px;
+    min-height: 620px;
+    justify-content: center;
+    align-items: flex-start;
+
+    background-image: url("../img/iphone-hand-mobile@1x.png"), url("../img/bg-back-tablet@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: right bottom, top;
+    background-size: 470px 550px, 100% 620px;
+    background-color: #283645;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .get-app {
+    width: 1200px;
+    min-height: 620px;
+    justify-content: center;
+    align-items: flex-start;
+
+    background-image: url("../img/iphone-hand-mobile@1x.png");
+    background-repeat: no-repeat;
+    background-position: right bottom;
+    background-size: 470px 550px;
+    background-color: transparent;
+  }
 }
 
 .get-app__banner {
-  margin: 0;
-  padding: 0;
+  .indent-reset();
 
-  font-family: "Open Sans", sans-serif;
   font-size: 18px;
   line-height: 18px;
   font-weight: 700;
-  color: #ffffff;
-  background-color: #283645;
+}
+
+.get-app__slogan {
+  .indent-reset();
+  display: none;
+}
+
+@media (min-width: @tablet-width) {
+  .get-app__slogan {
+    display: flex;
+  }
 }
 
 .get-app__environ {
-  font-family: "Open Sans", sans-serif;
+  .indent-reset();
+
   font-size: 14px;
   line-height: 24px;
   font-weight: 300;
-  color: #ffffff;
-  background-color: #283645;
 }
