--- a/source/less/global.less
+++ b/source/less/global.less
@@ -11,16 +11,17 @@
 }
 
 body {
-  margin: auto;
+  min-width: 320px;
+  margin: 0;
   padding: 0;
-  width: 320px;
 
   font-family: "Open Sans", "Arial", sans-serif;
   font-size: 14px;
   line-height: 21px;
   font-weight: 400;
-  color: #283645;
-  background-color: #ffffff;
+  color: #ffffff;
+
+  background-color: #282828;
 }
 
 a {
@@ -46,3 +47,19 @@ input[type="radio"].visually-hidden {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+/* @media (min-width: @tablet-width) {
+  body {
+    background-image: url("../img/bg-back-tablet@1x.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  body {
+    background-image: url("../img/bg-back-desktop@1x.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%;
+  }
+} */
