--- a/source/less/main-nav.less
+++ b/source/less/main-nav.less
@@ -1,10 +1,46 @@
 .main-nav {
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 22px;
+  margin: 0 auto;
+  padding: 0;
+
+  width: 320px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 
   font-size: 18px;
   font-weight: 700px;
   color: #ffffff;
   background-color: #283645;
+}
+
+@media (min-width: @tablet-width) {
+  .main-nav {
+    width: 620px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .main-nav {
+    padding: 0 20px;
+    width: 920px;
+
+    background-color: transparent;
+  }
+}
+
+.main-nav__list {
+  width: 100%;
+}
+
+@media (min-width: @desktop-width) {
+  .main-nav__list {
+    width: auto;
+    display: flex;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .main-nav__toggle {
+    display: none;
+  }
 }
