--- a/source/less/page-header.less
+++ b/source/less/page-header.less
@@ -1,7 +1,24 @@
 .page-header {
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
-  background-color: #283645;
-  background-image: url("../img/bg-back-mobile@1x.jpg");
-  background-repeat: no-repeat;
+}
+
+@media (min-width: @desktop-width) {
+  .page-header {
+    display: flex;
+    align-items: center;
+    width: 1200px;
+    min-height: 110px;
+    background-color: rgba(40, 54, 69, 0.7);
+  }
+}
+
+.page-header__logo-image {
+  position: absolute;
+}
+
+@media (min-width: @desktop-width) {
+  .page-header__logo-image {
+    position: relative;
+  }
 }
