--- a/source/less/site-list.less
+++ b/source/less/site-list.less
@@ -1,4 +1,8 @@
 .site-list {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+
   font-size: 18px;
   line-height: 32px;
   font-weight: 700;
@@ -7,11 +11,25 @@
   text-transform: uppercase;
   list-style: none;
 
-  margin: 0;
-  padding: 0;
-  text-align: center;
-
   a {
     color: #ffffff;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .site-list {
+    display: flex;
+    font-weight: 400px;
+    line-height: 18px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .site-list__item {
+    .indent-reset();
+    display: flex;
+    margin-left: 82px;
+    font-weight: 400;
+    line-height: 18px;
   }
 }
