--- a/source/less/reviews.less
+++ b/source/less/reviews.less
@@ -1,11 +1,88 @@
 .reviews {
-  margin: 0;
-  padding: 0;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 0 20px;
+  margin: 0 auto;
+  width: 280px;
+  min-height: 350px;
+
+  display: flex;
+  align-items: center;
 
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
   color: #283645;
   background-color: #ffffff;
+  text-align: center;
+}
+
+@media (min-width: @tablet-width) {
+  .reviews {
+    width: 580px;
+    min-height: 247px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .reviews {
+    width: 1160px;
+    min-height: 420px;
+
+    background-image: url("../img/icon-quotes.svg");
+    background-repeat: no-repeat;
+    background-position: center 50px;
+    background-size: 70px 90px;
+  }
+}
+
+.reviews__item {
+  .indent-reset();
+  display: flex;
+  flex-direction: column;
+}
+
+.reviews__wrapper {
+  .indent-reset();
+  display: flex;
+  flex-direction: column;
+}
+
+@media (min-width: @desktop-width) {
+  .reviews__wrapper {
+    margin: 0 auto;
+    width: 940px;
+    flex-direction: row;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .reviews__text {
+    order: -1;
+  }
+}
+
+.reviews__previous,
+.reviews__next {
+  display: none;
+}
+
+@media (min-width: @desktop-width) {
+  .reviews__previous,
+  .reviews__next {
+    display: flex;
+  }
+}
+
+.reviews__author-is {
+  display: none;
+}
+
+@media (min-width: @tablet-width) {
+  .reviews__author-is {
+    display: block;
+  }
+}
+
+@media (min-width: @desktop-width) {
+    .reviews__toggles {
+      display: none;
+    }
 }
