--- a/source/less/style.less
+++ b/source/less/style.less
@@ -13,6 +13,7 @@
 @import "advanteges.less";
 @import "reviews.less";
 @import "packages.less";
+@import "page-footer.less";
 @import "contacts.less";
 @import "form-page.less";
 @import "social.less";
