адаптивная верстка крупных блоков

--- a/source/less/advanteges.less
+++ b/source/less/advanteges.less
@@ -1,5 +1,4 @@
 .advanteges {
-  margin: 0;
   padding: 0;
   margin: 0 auto;
 
@@ -14,8 +13,7 @@
 
 @media (min-width: @tablet-width) {
   .advanteges {
-    margin: 0 auto;
-    width: 620px;
+    width: 660px;
   }
 }
 
@@ -23,6 +21,10 @@
   .advanteges {
     width: 1200px;
   }
+}
+
+.advanteges__issue {
+  .indent-reset();
 }
 
 .advanteges__list {
