--- a/source/less/get-app.less
+++ b/source/less/get-app.less
@@ -21,7 +21,7 @@
 
 @media (min-width: @tablet-width) {
   .get-app {
-    width: 620px;
+    width: 660px;
     min-height: 620px;
     justify-content: center;
     align-items: flex-start;
@@ -64,7 +64,14 @@
 
 @media (min-width: @tablet-width) {
   .get-app__slogan {
+    order: -1;
     display: flex;
+    width: 200px;
+    text-align: center;
+
+    font-size: 40px;
+    line-height: 48px;
+    font-weight: 300;
   }
 }
 
