--- a/source/less/form-page.less
+++ b/source/less/form-page.less
@@ -1,8 +1,11 @@
 .form-page {
-  margin: 0;
+  width: 320px;
   padding: 0;
-  padding-left: 20px;
-  padding-right: 20px;
+  margin: 0 auto;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   font-family: "Open Sans", sans-serif;
   color: #283645;
@@ -11,9 +14,58 @@
   background-color: #ffffff;
 }
 
+@media (min-width: @tablet-width) {
+  .form-page {
+    width: 660px;
+
+    background-image: url("../img/bg-back-tablet@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: center -100px;
+    background-size: 200% auto;
+  }
+}
+
+@media (min-width: @desktop-width) {
+    .form-page {
+      width: 1200px;
+
+      background-image: none;
+      background-color: transparent;
+    }
+}
+
 .form-page__title {
+  .indent-reset();
+  margin-top: 35px;
+  min-height: 170px;
+  width: 240px;
+
   font-size: 24px;
+  line-height: 28px;
   font-weight: 300;
   color: #ffffff;
   text-align: center;
+}
+
+@media (min-width: @tablet-width) {
+  .form-page__title {
+    min-height: 330px;
+    width: 500px;
+
+    font-size: 50px;
+    line-height: 60px;
+    font-weight: 300;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .form-page__title {
+    min-height: 285px;
+    width: 800px;
+    margin-top: 75px;
+
+    font-size: 50px;
+    line-height: 60px;
+    font-weight: 300;
+  }
 }
