--- a/source/less/advanteges.less
+++ b/source/less/advanteges.less
@@ -1,8 +1,6 @@
 .advanteges {
   padding: 0;
-  margin: 0 auto;
 
-  width: 320px;
 
   background-color: #f2f2f2;
   font-family: "Open Sans", sans-serif;
@@ -18,10 +16,10 @@
 }
 
 @media (min-width: @desktop-width) {
-  .advanteges {
-    width: 1200px;
-  }
-}
+   .advanteges {
+     width: 100%;
+   }
+ }
 
 .advanteges__issue {
   .indent-reset();
@@ -63,7 +61,7 @@
     min-height: 560px;
     width: 940px;
     margin: 0 auto;
-
+    border: 2px solid red;
     flex-direction: row;
     align-items: stretch;
 
