--- a/source/less/appstore-list.less
+++ b/source/less/appstore-list.less
@@ -1,6 +1,14 @@
 .appstore-list {
   margin: 0;
   padding: 0;
+  margin-bottom: 28px;
+  width: 100%;
   list-style: none;
   display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.appstore-list__image:nth-child(2) {
+  margin: 0 33px;
 }
