--- a/source/less/page-footer.less
+++ b/source/less/page-footer.less
@@ -1,5 +1,4 @@
 .page-footer {
-  width: 320px;
   padding: 0;
   margin: 0 auto;
 
@@ -17,16 +16,8 @@
 
 @media (min-width: @tablet-width) {
   .page-footer {
-    margin: 0 auto;
-    width: 660px;
+    min-height: 178px;
     display: flex;
     flex-direction: row;
-  }
-}
-
-@media (min-width: @desktop-width) {
-  .page-footer {
-    margin: 0 auto;
-    width: 1200px;
   }
 }
