--- a/source/less/container.less
+++ b/source/less/container.less
@@ -1,12 +1,16 @@
+.container {
+  width: 320px;
+  margin: 0 auto;
+}
+
+@media (min-width: @tablet-width) {
+  .container {
+    width: 660px;
+  }
+}
+
 @media (min-width: @desktop-width) {
   .container {
-    width: 1200px;
-    margin: 0 auto;
-
-    background-image: url("../img/bg-back-desktop@1x.jpg");
-    background-repeat: no-repeat;
-    background-position: top;
-    background-size: content;
-    background-color: #283645;
+    width: 100%;
   }
 }
