--- a/source/less/get-app.less
+++ b/source/less/get-app.less
@@ -1,65 +1,135 @@
 .get-app {
-  width: 320px;
   padding: 0;
-  margin: 0 auto;
-  min-height: 668px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
-
+  position: relative;
 
   font-family: "Open Sans", sans-serif;
   color: #ffffff;
 
-  background-image: url("../img/iphone-hand-mobile@1x.png"), url("../img/bg-back-mobile@1x.jpg");
+  background-image: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
-  background-position: left 65px, top;
-  background-size: 260px 50%, 100% 400px;
+  background-position: center top;
+  background-size: content;
   background-color: #283645;
 }
 
 @media (min-width: @tablet-width) {
   .get-app {
-    width: 660px;
+    padding: 0 20px;
     min-height: 620px;
     justify-content: center;
     align-items: flex-start;
 
-    background-image: url("../img/iphone-hand-mobile@1x.png"), url("../img/bg-back-tablet@1x.jpg");
-    background-repeat: no-repeat;
-    background-position: right bottom, top;
-    background-size: 470px 550px, 100% 620px;
-    background-color: #283645;
+    background-image: none;
+    background-color: transparent;
   }
 }
 
 @media (min-width: @desktop-width) {
   .get-app {
-    width: 1200px;
-    min-height: 620px;
-    justify-content: center;
+    padding: 0;
+    margin-top: auto;
+    width: 940px;
+    min-height: 645px;
+    justify-content: flex-start;
     align-items: flex-start;
+  }
+}
 
-    background-image: url("../img/iphone-hand-mobile@1x.png");
-    background-repeat: no-repeat;
-    background-position: right bottom;
-    background-size: 470px 550px;
+.get-app__conteiner {
+  .indent-reset();
+  margin-top: 400px;
+  min-height: 270px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+
+  background-color: #283645;
+}
+
+@media (min-width: @tablet-width) {
+  .get-app__conteiner {
+    margin: auto 0;
+    width: 300px;
     background-color: transparent;
+    z-index: 1;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .get-app__conteiner {
+    margin: 0;
+  }
+}
+
+.get-app__image {
+  .indent-reset();
+  position: absolute;
+  width: 260px;
+  height: 290px;
+  left: 0px;
+  bottom: 305px;
+}
+
+@media (min-width: @tablet-width) {
+  .get-app__image {
+    width: 470px;
+    height: 548px;
+    left: 180px;
+    bottom: 0px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .get-app__image {
+    width: 555px;
+    height: 645px;
+    left: 344px;
+    bottom: 0px;
   }
 }
 
 .get-app__banner {
   .indent-reset();
+  padding: 18px 34px;
+  margin-top: 30px;
+  margin-bottom: 33px;
 
   font-size: 18px;
   line-height: 18px;
   font-weight: 700;
+
+  border: 4px solid #ffffff;
+  border-radius: 50px 50px 50px 50px;
+}
+
+@media (min-width: @tablet-width) {
+  .get-app__banner {
+    margin-top: 40px;
+    margin-bottom: 46px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .get-app__banner {
+    margin-top: 60px;
+    margin-bottom: 66px;
+  }
 }
 
 .get-app__slogan {
   .indent-reset();
   display: none;
+
+  font-size: 40px;
+  line-height: 48px;
+  font-weight: 300;
 }
 
 @media (min-width: @tablet-width) {
@@ -68,17 +138,21 @@
     display: flex;
     width: 200px;
     text-align: center;
-
-    font-size: 40px;
-    line-height: 48px;
-    font-weight: 300;
   }
 }
 
 .get-app__environ {
   .indent-reset();
+  margin-bottom: 37px;
 
   font-size: 14px;
   line-height: 24px;
   font-weight: 300;
+}
+
+@media (min-width: @desktop-width) {
+  .get-app__environ {
+    margin-top: 60px;
+    margin-bottom: 0;
+  }
 }
