--- a/source/less/main-nav.less
+++ b/source/less/main-nav.less
@@ -1,8 +1,30 @@
 .main-nav {
-  margin: 0 auto;
+  .indent-reset();
+  display: flex;
+  flex-direction: column;
+  background-color: #283645;
+}
+
+@media (min-width: @tablet-width) {
+  .main-nav {
+    width: 100%;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .main-nav {
+    min-height: 110px;
+    width: 100%;
+    flex-direction: row;
+    justify-content: center;
+
+    background-color: rgba(40, 54, 69, 0.7);
+  }
+}
+
+.main-nav__conteiner {
   padding: 0;
 
-  width: 320px;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -13,18 +35,36 @@
   background-color: #283645;
 }
 
+@media (min-width: @desktop-width) {
+  .main-nav__conteiner {
+    margin: 0 auto;
+    width: 940px;
+    background-color: transparent;
+  }
+}
+
+.main-nav__header {
+  margin: 0;
+  padding: 0 20px;
+  width: 100%;
+  min-height: 69px;
+  display: flex;
+  justify-content: space-between;
+
+  border-bottom: 1px solid #000000;
+}
+
 @media (min-width: @tablet-width) {
-  .main-nav {
-    width: 660px;
+  .main-nav__header {
+    //width: auto;
+    min-height: 109px;
   }
 }
 
 @media (min-width: @desktop-width) {
-  .main-nav {
-    padding: 0 20px;
-    width: 920px;
-
-    background-color: transparent;
+  .main-nav__header {
+    width: auto;
+    border: none;
   }
 }
 
