--- a/source/less/page-header.less
+++ b/source/less/page-header.less
@@ -1,15 +1,29 @@
 .page-header {
-  margin: 0 auto;
   padding: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+@media (min-width: @tablet-width) {
+  .page-header {
+    background-image: url("../img/bg-back-tablet@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: center bottom;
+    background-size: auto;
+    background-color: #283645;
+  }
 }
 
 @media (min-width: @desktop-width) {
   .page-header {
     display: flex;
     align-items: center;
-    width: 1200px;
-    min-height: 110px;
-    background-color: rgba(40, 54, 69, 0.7);
+    min-height: 853px;
+
+    background-image: url("../img/bg-back-desktop@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: center bottom;
+    background-size: auto;
   }
 }
 
