--- a/source/less/reviews.less
+++ b/source/less/reviews.less
@@ -1,7 +1,7 @@
 .reviews {
-  padding: 0 20px;
-  margin: 0 auto;
-  width: 280px;
+  // padding: 0 20px;
+  // margin: 0 auto;
+  // width: 280px;
   min-height: 350px;
 
   display: flex;
@@ -16,14 +16,12 @@
 
 @media (min-width: @tablet-width) {
   .reviews {
-    width: 620px;
     min-height: 247px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .reviews {
-    width: 1160px;
     min-height: 420px;
 
     background-image: url("../img/icon-quotes.svg");
