--- a/source/less/get-app.less
+++ b/source/less/get-app.less
@@ -73,7 +73,7 @@
   position: absolute;
   width: 260px;
   height: 290px;
-  left: 0px;
+  left: 0;
   bottom: 305px;
 }
 
@@ -82,7 +82,7 @@
     width: 470px;
     height: 548px;
     left: 180px;
-    bottom: 0px;
+    bottom: 0;
   }
 }
 
@@ -91,7 +91,7 @@
     width: 555px;
     height: 645px;
     left: 344px;
-    bottom: 0px;
+    bottom: 0;
   }
 }
 
