--- a/source/less/get-app.less
+++ b/source/less/get-app.less
@@ -18,7 +18,9 @@
 
 @media (min-width: @tablet-width) {
   .get-app {
+    width: 620px;
     padding: 0 20px;
+    margin: 0 auto;
     min-height: 620px;
     justify-content: center;
     align-items: flex-start;
@@ -73,8 +75,8 @@
   position: absolute;
   width: 260px;
   height: 290px;
-  left: 0;
-  bottom: 305px;
+  left: 150px;
+  bottom: 280px;
 }
 
 @media (min-width: @tablet-width) {
