--- a/source/less/global.less
+++ b/source/less/global.less
@@ -11,6 +11,7 @@
 }
 
 body {
+  .indent-reset();
 
   font-family: "Open Sans", "Arial", sans-serif;
   font-size: 14px;
@@ -18,7 +19,7 @@ body {
   font-weight: 400;
   color: #ffffff;
 
-  background-color: #282828;
+  background-color: #283645;
 }
 
 a {
