--- a/source/less/page-footer.less
+++ b/source/less/page-footer.less
@@ -1,4 +1,9 @@
 .page-footer {
+  background-color: #ffffff;
+  width: 100%;
+}
+
+.page-footer__content {
   padding: 0;
   margin: 0 auto;
 
@@ -6,18 +11,28 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
 
   background-color: #ffffff;
 }
 
-.page-footer--index {
+.page-footer__content--index {
   display: none;
 }
 
 @media (min-width: @tablet-width) {
-  .page-footer {
+  .page-footer__content {
+    padding: 0;
+    width: 620px;
     min-height: 178px;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-footer__content {
+    width: 940px;
   }
 }
