--- a/source/less/main-nav.less
+++ b/source/less/main-nav.less
@@ -1,5 +1,6 @@
 .main-nav {
-  .indent-reset();
+  padding: 0;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   background-color: #283645;
@@ -35,6 +36,13 @@
   background-color: #283645;
 }
 
+@media (min-width: @tablet-width) {
+  .main-nav__conteiner {
+    margin: 0 auto;
+    width: 660px;
+  }
+}
+
 @media (min-width: @desktop-width) {
   .main-nav__conteiner {
     margin: 0 auto;
@@ -56,7 +64,6 @@
 
 @media (min-width: @tablet-width) {
   .main-nav__header {
-    //width: auto;
     min-height: 109px;
   }
 }
