--- a/source/less/container.less
+++ b/source/less/container.less
@@ -1,6 +1,8 @@
 .container {
   width: 320px;
   margin: 0 auto;
+  box-sizing: border-box;
+  padding: 0 20px;
 }
 
 @media (min-width: @tablet-width) {
