--- a/source/less/get-app.less
+++ b/source/less/get-app.less
@@ -1,5 +1,4 @@
 .get-app {
-  padding: 0;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -11,21 +10,23 @@
 
   background-image: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
-  background-position: center top;
+  background-position: center -62px;
   background-size: content;
   background-color: #283645;
 }
 
 @media (min-width: @tablet-width) {
   .get-app {
-    width: 620px;
-    padding: 0 20px;
     margin: 0 auto;
     min-height: 620px;
-    justify-content: center;
-    align-items: flex-start;
+    width: 660px;
+    flex-direction: row;
+    justify-content: flex-start;
 
-    background-image: none;
+    background-image: url("../img/bg-back-tablet@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: center bottom;
+    background-size: content;
     background-color: transparent;
   }
 }
@@ -33,15 +34,16 @@
 @media (min-width: @desktop-width) {
   .get-app {
     padding: 0;
-    margin-top: auto;
+    margin-top: 100px;
     width: 940px;
     min-height: 645px;
     justify-content: flex-start;
     align-items: flex-start;
+    background: none;
   }
 }
 
-.get-app__conteiner {
+.get-app__content {
   .indent-reset();
   margin-top: 400px;
   min-height: 270px;
@@ -51,21 +53,21 @@
   justify-content: space-between;
   align-items: center;
   text-align: center;
+  z-index: 1;
 
   background-color: #283645;
 }
 
 @media (min-width: @tablet-width) {
-  .get-app__conteiner {
-    margin: auto 0;
+  .get-app__content {
+    margin-bottom: 100px; //not work
     width: 300px;
     background-color: transparent;
-    z-index: 1;
   }
 }
 
 @media (min-width: @tablet-width) {
-  .get-app__conteiner {
+  .get-app__content {
     margin: 0;
   }
 }
@@ -75,15 +77,16 @@
   position: absolute;
   width: 260px;
   height: 290px;
-  left: 150px;
-  bottom: 280px;
+  left: 0;
+  bottom: 305px;
+  z-index: 1;
 }
 
 @media (min-width: @tablet-width) {
   .get-app__image {
     width: 470px;
     height: 548px;
-    left: 180px;
+    left: 170px;
     bottom: 0;
   }
 }
