--- a/source/less/page-footer.less
+++ b/source/less/page-footer.less
@@ -1,15 +1,18 @@
 .page-footer {
-  background-color: #ffffff;
-  width: 100%;
+  .indent-reset();
+}
+
+@media (min-width: @tablet-width) {
+  .page-footer {
+    background-color: #ffffff;
+  }
 }
 
 .page-footer__content {
-  padding: 0;
-  margin: 0 auto;
-
+  min-height: 284px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   flex-wrap: wrap;
 
@@ -22,9 +25,7 @@
 
 @media (min-width: @tablet-width) {
   .page-footer__content {
-    padding: 0;
-    width: 620px;
-    min-height: 178px;
+    min-height: 127px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -34,5 +35,11 @@
 @media (min-width: @desktop-width) {
   .page-footer__content {
     width: 940px;
+    min-height: 225px;
   }
+}
+
+.page-footer__social {
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
