--- a/source/less/page-header.less
+++ b/source/less/page-header.less
@@ -4,25 +4,64 @@
   flex-direction: column;
 }
 
-@media (min-width: @tablet-width) {
-  .page-header {
-    background-image: url("../img/bg-back-tablet@1x.jpg");
-    background-repeat: no-repeat;
-    background-position: center bottom;
-    background-size: auto;
-    background-color: #283645;
-  }
-}
-
 @media (min-width: @desktop-width) {
   .page-header {
     display: flex;
     align-items: center;
-    min-height: 853px;
 
     background-image: url("../img/bg-back-desktop@1x.jpg");
     background-repeat: no-repeat;
-    background-position: center bottom;
-    background-size: auto;
+    background-position: center top;
+    background-size: content;
+    background-color: transparent;
+  }
+}
+
+.page-header__title {
+  padding-top: 36px;
+  min-height: 171px;
+
+  font-size: 24px;
+  line-height: 29px;
+  font-weight: 300px;
+  text-align: center;
+
+  background-image: url("../img/bg-back-mobile@1x.jpg");
+  background-repeat: no-repeat;
+  background-position: center -62px;
+  background-size: content;
+  background-color: #283645;
+}
+
+@media (min-width: @tablet-width) {
+  .page-header__title {
+    padding-top: 80px;
+    min-height: 330px;
+
+    font-size: 50px;
+    line-height: 60px;
+
+    background-image: url("../img/bg-back-tablet@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: center -62px;
+    background-size: content;
+    background-color: #283645;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .page-header__title {
+    padding-top: 80px;
+    min-height: 285px;
+
+    font-size: 50px;
+    line-height: 60px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-header__title {
+    width: 550px;
+    background: none;
   }
 }
