--- a/source/less/photo-page.less
+++ b/source/less/photo-page.less
@@ -1,7 +1,5 @@
 .photo-page {
-  width: 320px;
   padding: 0;
-  margin: 0 auto;
   display: flex;
   flex-direction: column;
 
@@ -10,51 +8,59 @@
   font-size: 14px;
   line-height: 24px;
   text-align: center;
-
-  background-image: url("../img/bg-back-mobile@1x.jpg");
-  background-repeat: no-repeat;
-  background-position: top;
-  background-size: 100% 400px;
 }
 
 @media (min-width: @tablet-width) {
   .photo-page {
-    width: 660px;
-
-    background-image: url("../img/bg-back-tablet@1x.jpg");
-    background-repeat: no-repeat;
-    background-position: center -100px;
-    background-size: 200% auto;
+    background-color: #ffffff;
   }
 }
 
 @media (min-width: @desktop-width) {
   .photo-page {
-    width: 1200px;
-
     background-image: none;
   }
 }
 
 .photo-page__intro {
-  min-height: 355px;
-  .indent-reset();
-  padding-top: 35px;
-
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
+  padding: 0;
+  min-height: 185px;
+
+  font-size: 14px;
+  line-height: 30px;
+  background-color: #ffffff;
 }
 
 @media (min-width: @tablet-width) {
   .photo-page__intro {
-    min-height: 560px;
+    min-height: 228px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .photo-page__intro {
-    min-height: 525px;
+    min-height: 241px;
+  }
+}
+
+.photo-page__intro p {
+  .indent-reset();
+  margin-top: 50px;
+  width: 245px;
+}
+
+@media (min-width: @tablet-width) {
+  .photo-page__intro p {
+    margin-top: 100px;
+    width: 440px;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .photo-page__intro p {
+    width: 450px;
   }
 }
 
