подключение скрипта для меню

--- a/source/less/get-app.less
+++ b/source/less/get-app.less
@@ -109,9 +109,23 @@
   font-size: 18px;
   line-height: 18px;
   font-weight: 700;
+  color: #ffffff;
 
+  cursor: pointer;
+
+  background-color: transparent;
   border: 4px solid #ffffff;
   border-radius: 50px 50px 50px 50px;
+
+  &:hover {
+    background-color: #ffffff;
+    color: #d22856;
+  }
+
+  &:active {
+    background-color: #ffffff;
+    color: rgba(210,40,86, 0.3);
+  }
 }
 
 @media (min-width: @tablet-width) {
