--- a/source/less/main-nav.less
+++ b/source/less/main-nav.less
@@ -30,6 +30,7 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  position: relative;
 
   font-size: 18px;
   font-weight: 700px;
@@ -59,6 +60,7 @@
   min-height: 69px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 
   border-bottom: 1px solid #000000;
 }
@@ -88,12 +90,22 @@
 }
 
 .main-nav__toggle {
-  position: relative;
+  position: absolute;
+  left: 264px;
+  top: 25px;
 
   background: transparent;
   width: 50px;
+  height: 25px;
   cursor: pointer;
   border: none;
+}
+
+@media (min-width: @tablet-width) {
+  .main-nav__toggle {
+    top: 45px;
+    left: 600px;
+  }
 }
 
 @media (min-width: @desktop-width) {
@@ -102,10 +114,10 @@
   }
 }
 
-.main-nav__header--closed > .main-nav__toggle::before {
+.main-nav__content--closed .main-nav__toggle::before {
   content: "";
   position: absolute;
-  top: 20px;
+  top: 0;
   left: 0;
 
   width: 50px;
@@ -114,4 +126,53 @@
   background-color: #ffffff;
 
   box-shadow: 0 8px 0 0 #ffffff, 0 16px 0 0 #ffffff;
+}
+
+.main-nav__content--closed .main-nav__toggle:hover::before {
+  background-color: #d22856;
+  box-shadow: 0 8px 0 0 #d22856, 0 16px 0 0 #d22856;
+}
+
+.main-nav__content--closed .main-nav__toggle:active::before {
+  background-color: rgba(210,40,86, 0.3);
+  box-shadow: 0 8px 0 0 rgba(210,40,86, 0.3), 0 16px 0 0 rgba(210,40,86, 0.3);
+}
+
+.main-nav__content--opened .main-nav__toggle {
+  &::before,
+  &::after {
+    content: "";
+
+    position: absolute;
+    left: 8px;
+
+    width: 34px;
+    height: 3px;
+
+    background-color: #ffffff;
+  }
+
+  &::before {
+    transform: rotate(45deg);
+  }
+
+  &::after {
+    transform: rotate(-45deg);
+  }
+}
+
+.main-nav__content--opened .main-nav__toggle:hover::after,
+.main-nav__content--opened .main-nav__toggle:hover::before {
+  background-color: #d22856;
+}
+
+.main-nav__content--opened .main-nav__toggle:active::after,
+.main-nav__content--opened .main-nav__toggle:active::before {
+  background-color: rgba(210,40,86, 0.3);
+}
+
+@media (max-width: @desktop-width) {
+  .main-nav__content--closed .site-list__item {
+    display: none;
+  }
 }
