--- a/source/less/site-list.less
+++ b/source/less/site-list.less
@@ -14,6 +14,16 @@
   a {
     color: #ffffff;
   }
+
+  a[href] {
+    &:hover {
+      color: #d22856;
+    }
+
+    &:active {
+      color: rgba(210,40,86, 0.3);
+    }
+  }
 }
 
 @media (min-width: @desktop-width) {
