--- a/source/less/get-app.less
+++ b/source/less/get-app.less
@@ -34,12 +34,13 @@
 @media (min-width: @desktop-width) {
   .get-app {
     padding: 0;
-    margin-top: 100px;
-    width: 940px;
-    min-height: 645px;
+    margin-top: 109px;
+    width: 947px;
+    min-height: 635px;
     justify-content: flex-start;
     align-items: flex-start;
     background: none;
+    //border: 1px solid red;
   }
 }
 
@@ -51,7 +52,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: center;
+  //align-items: center;
   text-align: center;
   z-index: 1;
 
@@ -60,15 +61,16 @@
 
 @media (min-width: @tablet-width) {
   .get-app__content {
-    margin-bottom: 100px; //not work
     width: 300px;
     background-color: transparent;
   }
 }
 
-@media (min-width: @tablet-width) {
+@media (min-width: @desktop-width) {
   .get-app__content {
+    //border: 1px solid red;
     margin: 0;
+    //margin-left: 10px;
   }
 }
 
@@ -94,19 +96,19 @@
 @media (min-width: @desktop-width) {
   .get-app__image {
     width: 555px;
-    height: 645px;
-    left: 344px;
+    height: 545px;
+    left: 354px;
     bottom: 0;
   }
 }
 
 .get-app__banner {
   .indent-reset();
-  padding: 18px 34px;
+  padding: 16px 30px;
   margin-top: 30px;
   margin-bottom: 33px;
 
-  font-size: 18px;
+  font-size: 21px;
   line-height: 18px;
   font-weight: 700;
   color: #ffffff;
@@ -137,7 +139,7 @@
 
 @media (min-width: @desktop-width) {
   .get-app__banner {
-    margin-top: 60px;
+    margin-top: 49px;
     margin-bottom: 66px;
   }
 }
@@ -160,6 +162,16 @@
   }
 }
 
+@media (min-width: @desktop-width) {
+  .get-app__slogan {
+    width: auto;
+    font-size: 50px;
+    line-height: 60px;
+  }
+}
+
+
+
 .get-app__environ {
   .indent-reset();
   margin-bottom: 37px;
@@ -171,7 +183,9 @@
 
 @media (min-width: @desktop-width) {
   .get-app__environ {
-    margin-top: 60px;
+    font-size: 18px;
+
+    margin-top: 20px;
     margin-bottom: 0;
   }
 }
