--- a/source/less/main-nav.less
+++ b/source/less/main-nav.less
@@ -114,30 +114,6 @@
   }
 }
 
-// .main-nav__content--closed {
-//   background-image: url("../img/bg-back-mobile@1x.jpg");
-//   background-repeat: no-repeat;
-//   background-position: center top;
-//   background-size: content;
-//   background-color: #283645;
-// }
-//
-// @media (min-width: @tablet-width) {
-//   .main-nav__content--closed {
-//     background-image: url("../img/bg-back-tablet@1x.jpg");
-//     background-repeat: no-repeat;
-//     background-position: center top;
-//     background-size: content;
-//     background-color: #283645;
-//   }
-// }
-//
-// @media (min-width: @desktop-width) {
-//   .main-nav__content--closed {
-//     background: none;
-//   }
-// }
-
 .main-nav__content--closed .main-nav__toggle::before {
   content: "";
   position: absolute;
@@ -213,40 +189,10 @@
   }
 
   .main-nav__content--nojs .main-nav__toggle {
-    &::before,
-    &::after {
-      content: "";
-
-      position: absolute;
-      left: 8px;
-
-      width: 34px;
-      height: 3px;
-
-      background-color: #ffffff;
-      box-shadow: none;
-    }
-
-    &::before {
-      top: 8px;
-      transform: rotate(45deg);
-    }
-
-    &::after {
-      top: 8px;
-      transform: rotate(-45deg);
-    }
+    display: none;
   }
 
-  .main-nav__content--nojs .main-nav__toggle:hover::after,
-  .main-nav__content--nojs .main-nav__toggle:hover::before {
-    background-color: #d22856;
-    box-shadow: none;
-  }
-
-  .main-nav__content--nojs .main-nav__toggle:active::after,
-  .main-nav__content--nojs .main-nav__toggle:active::before {
-    background-color: rgba(210,40,86, 0.3);
-    box-shadow: none;
+  .main-nav__content--nojs .main-nav__header {
+    border-bottom: 1px solid #000000
   }
 }
