--- a/source/less/main-nav.less
+++ b/source/less/main-nav.less
@@ -35,7 +35,7 @@
   font-size: 18px;
   font-weight: 700px;
   color: #ffffff;
-  background-color: #283645;
+  background-color: transparent;
 }
 
 @media (min-width: @tablet-width) {
@@ -174,5 +174,25 @@
 @media (max-width: @desktop-width) {
   .main-nav__content--closed .site-list__item {
     display: none;
+  }
+}
+@media (max-width: @desktop-width) {
+    .main-nav__content--closed .main-nav__header {
+      background-color: rgba(40, 54, 69, 0.7);
+      border-bottom: none;
+    }
+}
+
+@media (max-width: @desktop-width) {
+  .main-nav__content--nojs .site-list__item {
+    display: block;
+  }
+
+  .main-nav__content--nojs .main-nav__toggle {
+    display: none;
+  }
+
+  .main-nav__content--nojs .main-nav__header {
+    border-bottom: 1px solid #000000
   }
 }
