закончена верстка страницы с фото

--- a/source/less/get-app.less
+++ b/source/less/get-app.less
@@ -46,6 +46,7 @@
 
 .get-app__content {
   .indent-reset();
+  //border: 1px solid red;
   margin-top: 400px;
   min-height: 270px;
 
@@ -61,6 +62,7 @@
 
 @media (min-width: @tablet-width) {
   .get-app__content {
+    margin-top: 0;
     width: 300px;
     background-color: transparent;
   }
@@ -68,7 +70,6 @@
 
 @media (min-width: @desktop-width) {
   .get-app__content {
-    //border: 1px solid red;
     margin: 0;
     //margin-left: 10px;
   }
