--- a/source/less/style.less
+++ b/source/less/style.less
@@ -9,6 +9,7 @@
 @import "photo-page.less";
 @import "users-photo.less";
 @import "user-card.less";
+@import "photo-adjust.less";
 @import "get-app.less";
 @import "advanteges.less";
 @import "reviews.less";
