завершена адаптивная верстка

--- a/source/less/main-nav.less
+++ b/source/less/main-nav.less
@@ -134,8 +134,8 @@
 }
 
 .main-nav__content--closed .main-nav__toggle:active::before {
-  background-color: rgba(210,40,86, 0.3);
-  box-shadow: 0 8px 0 0 rgba(210,40,86, 0.3), 0 16px 0 0 rgba(210,40,86, 0.3);
+  background-color: rgba(210, 40, 86, 0.3);
+  box-shadow: 0 8px 0 0 rgba(210, 40, 86, 0.3), 0 16px 0 0 rgba(210, 40, 86, 0.3);
 }
 
 .main-nav__content--opened .main-nav__toggle {
@@ -168,7 +168,7 @@
 
 .main-nav__content--opened .main-nav__toggle:active::after,
 .main-nav__content--opened .main-nav__toggle:active::before {
-  background-color: rgba(210,40,86, 0.3);
+  background-color: rgba(210, 40, 86, 0.3);
 }
 
 @media (max-width: @desktop-width) {
@@ -176,11 +176,12 @@
     display: none;
   }
 }
+
 @media (max-width: @desktop-width) {
-    .main-nav__content--closed .main-nav__header {
-      background-color: rgba(40, 54, 69, 0.7);
-      border-bottom: none;
-    }
+  .main-nav__content--closed .main-nav__header {
+    background-color: rgba(40, 54, 69, 0.7);
+    border-bottom: none;
+  }
 }
 
 @media (max-width: @desktop-width) {
@@ -193,6 +194,6 @@
   }
 
   .main-nav__content--nojs .main-nav__header {
-    border-bottom: 1px solid #000000
+    border-bottom: 1px solid #000000;
   }
 }
