--- a/source/less/photo-adjust.less
+++ b/source/less/photo-adjust.less
@@ -149,7 +149,7 @@
   height: 2px;
   background-color: #283645;
   position: absolute;
-  content: '';
+  content: "";
   top: 0;
   left: 0;
   transform: translate(0, -50%);
@@ -172,14 +172,14 @@
 }
 
 @media (min-width: @desktop-width) {
-    .photo-adjust__bar {
-      width: 345px;
+  .photo-adjust__bar {
+    width: 345px;
 
-      &::before {
-        left: 24px;
-        width: 290px;
-      }
+    &::before {
+      left: 24px;
+      width: 290px;
     }
+  }
 }
 
 .photo-adjust__bar--crop {
