--- a/source/less/site-list.less
+++ b/source/less/site-list.less
@@ -21,7 +21,7 @@
     }
 
     &:active {
-      color: rgba(210,40,86, 0.3);
+      color: rgba(210, 40, 86, 0.3);
     }
   }
 }
@@ -53,7 +53,7 @@
     border: none;
 
     a {
-    text-transform: none;
+      text-transform: none;
     }
   }
 }
