завершена адаптивная верстка

--- a/source/less/get-app.less
+++ b/source/less/get-app.less
@@ -127,7 +127,7 @@
 
   &:active {
     background-color: #ffffff;
-    color: rgba(210,40,86, 0.3);
+    color: rgba(210, 40, 86, 0.3);
   }
 }
 
@@ -170,8 +170,6 @@
     line-height: 60px;
   }
 }
-
-
 
 .get-app__environ {
   .indent-reset();
